配置文件删除

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,47 @@
 /target/
+bin/
+
+*target*
+
+.loadpath
+
+
+
+.class
+.classpath
+
+
+.project
+
+.settings
+
+.metadata
+
+
+
+tmp/**
+t
+mp/**/*
+
+*.tmp
+*
+.bak
+*.swp
+
+*~.nib
+
+
+
+# Package Files #
+
+*.jar
+
+*.war
+
+*.ear
+
+
+
+.gitignore
+
+*.properties
